# tchoutchou

./: .gitignore  Cargo.toml  README.md  bench_results.jsonl  docker-stack.yaml  package-lock.json  package.json
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  deploy.yaml  test.yaml
adr/: 202603012-train-data.md
app/: Cargo.toml
app/src/: main.rs
app/src/app/: mod.rs  schedule.rs  schedulev2.rs
app/src/domain/: destinations.rs  mod.rs  optim.rs
app/src/infra/: caches.rs  config.rs  cron.rs  graph_cache.rs  mod.rs
app/src/infra/http/: mod.rs
app/src/infra/http/handlers/: mod.rs
app/src/infra/http/v2/: handlersv2.rs  mod.rs
app/src/infra/importers/: mod.rs
app/src/infra/importers/gtfs/: fetcher.rs  importer.rs  mod.rs
app/src/infra/importers/gtfs/parser/: calendar_dates.rs  mod.rs  stations.rs  stop_times.rs  stops.rs  trips.rs
app/src/infra/importers/gtfs/parsers/: calendar.rs  calendar_dates.rs  mod.rs  routes.rs  stop_times.rs  stops.rs  trips.rs
app/src/infra/repository/: geospatial.rs  mod.rs  sqlite.rs  sqlitev2.rs
client/: .prettierignore  Dockerfile  package-lock.json  package.json  vite.config.ts
infra/: Dockerfile  docker-stack.yaml
prototype/: .dockerignore  Dockerfile  docker-stack.yaml  svelte.config.js
prototype/src/: hooks.server.ts
scripts/: db.md  ingest_museums.py  ingest_nodes.py  ingest_weather_stations.py  insee_code.py  weather_data.py
src/: hooks.server.ts
src/lib/: index.ts  journey.remote.ts  journey.ts  line_schedule.remote.ts  lines.remote.ts  schedule.ts  (+2 more)
(+73 files in other folders)
