[package]
name = "app"
version = "0.1.0"
edition = "2024"
default-run = "app"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10"
derive_more = { version = "2.1.1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
zip = "2"

[[bin]]
name = "bench_destinations"
path = "src/bin/bench_destinations.rs"

[dev-dependencies]
mockall = "0.13"
mockito = "1"
pretty_assertions = "1.4.1"
